# catalyst

./: Cargo.toml
.cargo/: config.toml
benches/: kernel.rs
catalyst-gui/: Cargo.toml
catalyst-gui/src/: data.rs  main.rs
catalyst-lib/: .gitignore  Cargo.toml  training_loss.html
catalyst-lib/src/: lib.rs  math.rs  train.rs
catalyst-lib/tests/: bayesian.rs  kernel.rs  math.rs
src/: lib.rs
tests/: bayesian.rs  kernel.rs  math.rs  utils.rs
