[package]
name = "catalyst-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19.1", features = ["wgpu", "webgpu", "ndarray", "rocm", "autodiff"]}
libm = "0.2.15"
plotly = { version = "0.13.5", optional = true }

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[[bench]]
name = "kernel"
harness = false

[features]
default = ["visualize"]
visualize = ["dep:plotly"]
